      hierarchy file to all moms on startup, and all moms update the server and request 
      the hierarchy file. If both are trying to do this at once, it can cause a lot of 
      traffic. -c tells pbs_server to wait 10 minutes to attempt to contact moms that 
      haven't contacted it, reducing this traffic.

3.0.5
  b - fix for writing too much data when job_script is saved to job log.
  b - fix for where pbs_mom would not automatically set gpu mode.
  b - fix for alligning qstat -r output when configured with -DTXT.
  e - Change size of transfer block used on job rerun from 4k to 64k.
  b - With nvidia gpus, TORQUE was losing the directive of what nodes it should
      run the job on from Moab. Corrected.
  e - add the $PBS_WALLTIME variable to jobs, thanks to a patch from Mark Roberts 

3.0.4
  c - fix a buffer being overrun with nvidia gpus enabled
  b - no longer leave zombie processes when munge authenticating.
  b - no longer reject procs if it is the second argument to -l
  b - when having pbs_mom re-read the config file, old servers were kept, and pbs_mom
      attempted to communicate with those as well. Now they are cleared and only the 
      new server(s) are contacted.
  b - pbsnodes -l can now search on all valid node states
  e - Added functionality that allows the values for the server parameter
      authorized_users to use wild cards for both the user and host portion.
  e - Improvements in munge handling of client connections and authentication.

3.0.3
  b - fix for bugzilla #141 - qsub was overwriting the path variable in PBSD_authenticate
  e - automatically create and mount /dev/cpuset when TORQUE is configured but the cpuset
      directory isn't there 
  b - fix a bug where node lines past 256 characters were rejected. This buffer has been
      made much larger (8192 characters)
  b - clear out exec_gpus as needed
  b - fix for bugzilla #147 - recreate $PBS_NODESFILE file when restarting a blcr
      checkpointed job